connexion, deconnexion, homepage, inscription are done

--- a/app/Resources/views/blog/post/post.html.twig
+++ b/app/Resources/views/blog/post/post.html.twig
@@ -2,66 +2,6 @@
 
 {% block body %} 
 <main>
-<p>Ceci est le post numéro: {{ id }}</p>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
+<p>{{ 'msg_test'|trans }}: {{ id }}</p>
 </main>
 {% endblock %}
