--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,6 +22,7 @@
         {% block header %}{% endblock %}
         {% block body %}{% endblock %}
         {% block footer %}{% endblock %}
+        <script type="text/javascript" src="{{ asset('assets/materialize/js/materialize.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
