--- a/app/Resources/views/blog/template.html.twig
+++ b/app/Resources/views/blog/template.html.twig
@@ -9,9 +9,12 @@
             <a href="#" class="brand-logo">Logo</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">Connexion</a></li>
-                <li><a href="#">Deconnexion</a></li>
-                <li><a href="#">Inscription</a></li>
+                {% if not app.user %}
+                    <li><a href="{{ path('fos_user_security_login') }}">Connexion</a></li>
+                    <li><a href="{{ path('fos_user_registration_register') }}">Inscription</a></li>
+                {% elseif app.user %}
+                    <li><a href="{{ path('fos_user_security_logout') }}">Deconnexion</a></li>
+                {% endif %}
             </ul>
         </div>
                 
@@ -22,15 +25,18 @@
     <div class="nav-content cyan" id="fixedTab">
         <div class="container">
             <ul class="tabs tabs-transparent">
-                <li class="tab"><a href="#test1">Test 1</a></li>
-                <li class="tab"><a class="active" href="#test2">Test 2</a></li>
-                <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
-                <li class="tab"><a href="#test4">Test 4</a></li>
+                <li class="tab"><a href="{{ path('homepage') }}">Accueil</a></li>
+                <li class="tab"><a href="#test2">Test 2</a></li>
+                <li class="tab"><a href="#test4">Profil</a></li>
             </ul>
         </div>
     </div>
   </nav>
 </header>
+{% endblock %}
+
+{% block body %}
+{{ parent() }}
 {% endblock %}
 
 {% block footer %}
@@ -63,7 +69,7 @@
 
 {% block javascripts %}
 <script>
-// When the user scrolls the page, execute myFunction 
+{{ parent() }}
 $(document).ready(function() {
     var positionTab = $(".nav-content").position().top;
     $(document).scroll(function() {
