--- a/app/Resources/views/blog/accueil/accueil.html.twig
+++ b/app/Resources/views/blog/accueil/accueil.html.twig
@@ -3,23 +3,27 @@
 {% block body %}
 <main>
     <div class="container">
-        <div class="row">
-            <div class="col s3">
-                <ul class="collection with-header">
-                        <li class="collection-header"><h5>10 derniers posts</h5></li>
-                    {% for post in posts %}
-                        <a href="{{ path('post', {'url_alias': post.urlAlias}) }}" class="collection-item">{{ post.titre }}</a>
-                    {% endfor %}
-                </ul>
-                <ul class="pagination">
-                    {% for p in range(1, nbPages) %}
-                        <li {% if p == page %} class="active" {% else %} class="waves-effect" {% endif %}>
-                            <a href="{{ path('homepage', {'page': p}) }}">{{ p }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
+        {% if app.user %}
+            <div class="row">
+                <div class="col s3">
+                    <ul class="collection with-header">
+                            <li class="collection-header"><h5>10 derniers posts</h5></li>
+                        {% for post in posts %}
+                            <a href="{{ path('post', {'url_alias': post.urlAlias}) }}" class="collection-item">{{ post.titre }}</a>
+                        {% endfor %}
+                    </ul>
+                    <ul class="pagination">
+                        {% for p in range(1, nbPages) %}
+                            <li {% if p == page %} class="active" {% else %} class="waves-effect" {% endif %}>
+                                <a href="{{ path('homepage', {'page': p}) }}">{{ p }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
-        </div>
+        {% else %}
+            {% include 'blog/post/displayPosts.html.twig' %}
+        {% endif %}
     </div>
 </main>
 {% endblock %}
