--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
@@ -1,5 +1,7 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% extends "blog/template.html.twig" %}
 
-{% block fos_user_content %}
-{% include "@FOSUser/ChangePassword/change_password_content.html.twig" %}
-{% endblock fos_user_content %}
+{% block body %}
+<main>
+    {% include "@FOSUser/ChangePassword/change_password_content.html.twig" %}
+</main>
+{% endblock body %}
