--- a/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -1,5 +1,11 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% extends "blog/template.html.twig" %}
 
-{% block fos_user_content %}
-{% include "@FOSUser/Profile/edit_content.html.twig" %}
-{% endblock fos_user_content %}
+{% block body %}
+<main>
+    <div class="container">
+        <div class="row">
+            {% include "@FOSUser/Profile/edit_content.html.twig" %}
+        </div>
+    </div>
+</main>
+{% endblock body %}
