--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -1,8 +1,28 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'fos_user_profile_edit' } }) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'profile.edit.submit'|trans }}" />
+{{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'fos_user_profile_edit col s12' } }) }}
+    <div class="row">
+        <div  class="input-field col s6">
+            {{ form_label(form.username) }}
+            {{ form_widget(form.username) }}
+            {{ form_errors(form.username) }}
+        </div>
+        <div  class="input-field col s6">
+            {{ form_label(form.email) }}
+            {{ form_widget(form.email) }}
+            {{ form_errors(form.email) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="input-field col s6">
+            {{ form_label(form.current_password) }}
+            {{ form_widget(form.current_password) }}
+            {{ form_errors(form.current_password) }}
+        </div>
+    </div>
+    <div class="row">
+        <div>
+            <button type="submit" class="waves-effect waves-light btn amber accent-4">{{ 'profile.edit.submit'|trans }}</button>
+        </div>
     </div>
 {{ form_end(form) }}
