--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,20 +2,20 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}{{ 'text.titreOnglet'|trans }}{% endblock %}</title>
+        {% block stylesheets %}
+            <link type="text/css" rel="stylesheet" href="{{ asset('assets/materialize/css/materialize.min.css') }}"  media="screen,projection"/>
+            <!-- Own CSS -->
+            <link type="text/css" rel="stylesheet" href="{{ asset('assets/css/style.css') }}"/>
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
         <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="{{ asset('assets/materialize/css/materialize.min.css') }}"  media="screen,projection"/>
+        
         <!--Let browser know website is optimized for mobile-->
         <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
-
-        <!-- Own CSS -->
-        <link type="text/css" rel="stylesheet" href="{{ asset('assets/css/style.css') }}"/>
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
