--- a/app/Resources/views/blog/accueil/accueil.html.twig
+++ b/app/Resources/views/blog/accueil/accueil.html.twig
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col s3">
                     <ul class="collection with-header">
-                            <li class="collection-header"><h5>10 derniers posts</h5></li>
+                            <li class="collection-header"><h5>{{ 'text.titre.derniersPosts'|trans }}</h5></li>
                         {% for post in posts %}
                             <a href="{{ path('post', {'url_alias': post.urlAlias}) }}" class="collection-item">{{ post.titre }}</a>
                         {% endfor %}
