footer est accessible en scrollant uniquement

--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 <main>
-    {% include "@FOSUser/ChangePassword/change_password_content.html.twig" %}
+    <div class="container">
+        {% include "@FOSUser/ChangePassword/change_password_content.html.twig" %}
+    </div>
 </main>
 {% endblock body %}
