--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -4,12 +4,12 @@
     <div class="col s12 m6">
         <div class="card green accent-4">
         <div class="card-content white-text">
-            <span class="card-title">Mise à jour réussie !</span>
+            <span class="card-title">{{ 'text.card.title.successUpdate'|trans }}</span>
             <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
             <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
         </div>
         <div class="card-action">
-            <a href="{{ path('homepage') }}">Accueil</a>
+            <a href="{{ path('homepage') }}">{{ 'lien.accueil'|trans }}</a>
         </div>
         </div>
     </div>
