--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
@@ -1,8 +1,29 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
-    {{ form_widget(form) }}
+
+    <div class="row">
+        <div class="input-field col s6">
+            {{ form_label(form.current_password) }}
+            {{ form_widget(form.current_password) }}
+            {{ form_errors(form.current_password) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="input-field col s6">
+            {{ form_label(form.plainPassword.first) }}
+            {{ form_widget(form.plainPassword.first) }}
+            {{ form_errors(form.plainPassword.first) }}
+        </div>
+        <div class="input-field col s6">
+            {{ form_label(form.plainPassword.second) }}
+            {{ form_widget(form.plainPassword.second) }}
+            {{ form_errors(form.plainPassword.second) }}
+        </div>
+    </div>
     <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+        <button type="submit" class="waves-effect waves-light btn amber accent-4">
+            {{ 'change_password.submit'|trans }}
+        </button>
     </div>
 {{ form_end(form) }}
