--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,8 +19,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
-        {% block header %}{% endblock %}
-        {% block body %}{% endblock %}
+        <div id="header-main">
+            {% block header %}{% endblock %}
+            {% block body %}{% endblock %}
+        </div>
         {% block footer %}{% endblock %}
         <script type="text/javascript" src="{{ asset('assets/materialize/js/materialize.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
