--- a/app/Resources/views/blog/post/post.html.twig
+++ b/app/Resources/views/blog/post/post.html.twig
@@ -3,7 +3,20 @@
 {% block body %} 
 <main>
     <div class="container">
-        <p>{{ 'msg_test'|trans }}: {{ id }}</p>
+        <div class="col s12 m7">
+            <div class="card horizontal hoverable teal lighten-4">
+                <div class="card-image">
+                USER IMAGE
+                </div>
+                <div class="card-stacked">
+                    <div class="card-content">
+                        <span class="card-title">{{ post.titre }}</span>
+                        <p>{{ post.content }}</p>
+                        <blockquote>{{ 'text.blockquote.date'|trans }} {{ post.published|date('d/m/Y') }}</blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 {% endblock %}
