--- a/app/Resources/views/blog/template.html.twig
+++ b/app/Resources/views/blog/template.html.twig
@@ -19,7 +19,7 @@
         </div>
                 
         <div style="padding-top: 5em; padding-bottom: 5em;">
-            <h4 class="center-align">{{ 'text.titreMenu'|trans }}</h4>
+            <h4 class="center-align">{{ 'text.titreOnglet'|trans }}</h4>
         </div>
     </div>
     <div id="variable-fixed">
