test traduction, ajout route creation post avec son msg flash

--- a/app/Resources/views/blog/accueil/accueil.html.twig
+++ b/app/Resources/views/blog/accueil/accueil.html.twig
@@ -20,6 +20,7 @@
                         {% endfor %}
                     </ul>
                 </div>
+                {% include "blog/flash_messages/display.html.twig" %}
             </div>
         {% else %}
             {% include 'blog/post/displayPosts.html.twig' %}
