--- a/app/Resources/views/blog/template.html.twig
+++ b/app/Resources/views/blog/template.html.twig
@@ -27,12 +27,11 @@
             <div class="container">
                 <ul class="tabs tabs-transparent">
                     <li class="tab"><a href="{{ path('homepage') }}">{{ 'lien.accueil'|trans }}</a></li>
+                    <li class="tab"><a href="#search-modal" class="modal-trigger">{{ 'lien.modal.recherchePost'|trans }}</a></li>
                     {% if app.user %}
+                        <li class="tab"><a href="{{ path('createPost') }}">{{ 'lien.post.create'|trans }}</a></li>
                         <li class="tab"><a href="{{ path('fos_user_profile_edit') }}">{{ 'lien.profil'|trans }}</a></li>
                     {% endif %}
-                    <li class="tab">
-                        <a href="#search-modal" class="modal-trigger">{{ 'lien.modal.recherchePost'|trans }}</a>
-                    </li>
                 </ul>
             </div>
         </div>
