--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
@@ -6,24 +6,24 @@
         <div class="input-field col s6">
             {{ form_label(form.current_password) }}
             {{ form_widget(form.current_password) }}
-            {{ form_errors(form.current_password) }}
+            <span class="helper-text red-text" data-error="wrong">{{ form_errors(form.current_password) }}</span>
         </div>
     </div>
     <div class="row">
         <div class="input-field col s6">
             {{ form_label(form.plainPassword.first) }}
             {{ form_widget(form.plainPassword.first) }}
-            {{ form_errors(form.plainPassword.first) }}
+            <span class="helper-text red-text" data-error="wrong">{{ form_errors(form.plainPassword.first) }}</span>
         </div>
         <div class="input-field col s6">
             {{ form_label(form.plainPassword.second) }}
             {{ form_widget(form.plainPassword.second) }}
-            {{ form_errors(form.plainPassword.second) }}
+            <span class="helper-text red-text" data-error="wrong">{{ form_errors(form.plainPassword.second) }}</span>
         </div>
     </div>
     <div>
         <button type="submit" class="waves-effect waves-light btn amber accent-4">
-            {{ 'change_password.submit'|trans }}
+            <i class="material-icons left">edit</i>{{ 'change_password.submit'|trans }}
         </button>
     </div>
 {{ form_end(form) }}
