--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -3,7 +3,15 @@
     <div class="row">
         <div class="col s12">
             {% if error %}
-                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                <div class="row">
+                    <div class="col s12 m6">
+                        <div class="card red">
+                            <div class="card-content white-text">
+                                <p>{{ error.messageKey|trans(error.messageData, 'security') }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             {% endif %}
         </div>
         
@@ -32,7 +40,7 @@
             <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>-->
 
             <button class="btn-large waves-effect waves-light cyan" type="submit" id="_submit" name="_submit">
-                {{ 'security.login.submit'|trans }}
+                <i class="material-icons left">input</i>{{ 'security.login.submit'|trans }}
             </button>
         </form>
     </div>
