--- a/app/Resources/views/blog/accueil/accueil.html.twig
+++ b/app/Resources/views/blog/accueil/accueil.html.twig
@@ -9,7 +9,9 @@
                     <ul class="collection with-header">
                             <li class="collection-header"><h5>{{ 'text.titre.derniersPosts'|trans }}</h5></li>
                         {% for post in posts %}
-                            <a href="{{ path('post', {'url_alias': post.urlAlias}) }}" class="collection-item">{{ post.titre }}</a>
+                            <a href="{{ path('post', {'url_alias': post.urlAlias}) }}" class="collection-item">
+                                <i class="material-icons left">keyboard_arrow_right</i>{{ post.titre }}
+                            </a>
                         {% endfor %}
                     </ul>
                     <ul class="pagination">
@@ -17,6 +19,16 @@
                             <li {% if p == page %} class="active" {% else %} class="waves-effect" {% endif %}>
                                 <a href="{{ path('homepage', {'page': p}) }}">{{ p }}</a>
                             </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="col s3">
+                    <ul class="collection with-header">
+                        <li class="collection-header"><h5>{{'text.titre.mesPosts'|trans }}</h5></li>
+                        {% for post in app.user.posts %}
+                            <a href="{{ path('post', {'url_alias': post.urlAlias}) }}" class="collection-item">
+                                <i class="material-icons left">keyboard_arrow_right</i>{{ post.titre }}
+                            </a>
                         {% endfor %}
                     </ul>
                 </div>
