--- a/app/Resources/views/blog/template.html.twig
+++ b/app/Resources/views/blog/template.html.twig
@@ -10,10 +10,21 @@
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 {% if not app.user %}
-                    <li><a href="{{ path('fos_user_security_login') }}">{{ 'lien.connexion'|trans }}</a></li>
-                    <li><a href="{{ path('fos_user_registration_register') }}">{{ 'lien.inscription'|trans }}</a></li>
+                    <li><a href="{{ path('fos_user_security_login') }}">
+                            <i class="material-icons left">input</i>{{ 'lien.connexion'|trans }}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('fos_user_registration_register') }}">
+                            <i class="material-icons left">person_add</i>{{ 'lien.inscription'|trans }}
+                        </a>
+                    </li>
                 {% elseif app.user %}
-                    <li><a href="{{ path('fos_user_security_logout') }}">{{ 'lien.deconnexion'|trans }}</a></li>
+                    <li>
+                        <a href="{{ path('fos_user_security_logout') }}">
+                                <i class="material-icons left">exit_to_app</i>{{ 'lien.deconnexion'|trans }}
+                        </a>
+                    </li>
                 {% endif %}
             </ul>
         </div>
@@ -26,11 +37,27 @@
         <div class="nav-content cyan" id="fixedTab">
             <div class="container">
                 <ul class="tabs tabs-transparent">
-                    <li class="tab"><a href="{{ path('homepage') }}">{{ 'lien.accueil'|trans }}</a></li>
-                    <li class="tab"><a href="#search-modal" class="modal-trigger">{{ 'lien.modal.recherchePost'|trans }}</a></li>
+                    <li class="tab">
+                        <a href="{{ path('homepage') }}">
+                            <i class="material-icons left">home</i>{{ 'lien.accueil'|trans }}
+                        </a>
+                    </li>
+                    <li class="tab">
+                        <a href="#search-modal" class="modal-trigger">
+                            <i class="material-icons left">search</i>{{ 'lien.modal.recherchePost'|trans }}
+                        </a>
+                    </li>
                     {% if app.user %}
-                        <li class="tab"><a href="{{ path('createPost') }}">{{ 'lien.post.create'|trans }}</a></li>
-                        <li class="tab"><a href="{{ path('fos_user_profile_edit') }}">{{ 'lien.profil'|trans }}</a></li>
+                        <li class="tab">
+                            <a href="{{ path('createPost') }}">
+                                <i class="material-icons left">add_circle</i>{{ 'lien.post.create'|trans }}
+                            </a>
+                        </li>
+                        <li class="tab">
+                            <a href="{{ path('fos_user_profile_edit') }}">
+                                <i class="material-icons left">person</i>{{ 'lien.profil'|trans }}
+                            </a>
+                        </li>
                     {% endif %}
                 </ul>
             </div>
@@ -62,13 +89,17 @@
               </div>
               <div class="row">
                   <div class="col s2 offset-s10">
-                        <button type="submit" class="btn waves-effect waves-light cyan">{{ 'btn.submit.rechercher'|trans }}</button>
+                        <button type="submit" class="btn waves-effect waves-light cyan">
+                            <i class="material-icons left">search</i>{{ 'btn.submit.rechercher'|trans }}
+                        </button>
                   </div>
               </div>
           </form>
             <div class="row">
                 <div class="col s2 offset-s10">
-                    <button type="button" class="modal-close waves-effect btn-flat modal-close red white-text" id="modal-close">{{ 'btn.fermer'|trans }}</button>
+                    <button type="button" class="modal-close waves-effect btn-flat modal-close red white-text" id="modal-close">
+                            <i class="material-icons left">close</i>{{ 'btn.fermer'|trans }}
+                    </button>
                 </div>
             </div>
         </div>
@@ -83,26 +114,31 @@
 <footer class="page-footer cyan lighten-2" id="footer">
     <div class="container">
     <div class="row">
+        <br>
+        <br>
+        <br><br>
         <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        <h5 class="white-text">{{ 'text.titre.footer'|trans}}</h5>
+        <p class="grey-text text-lighten-4">{{ 'text.paragraph.footer'|trans }}</p>
+        <a href="https://symfony.com/" class="col s2">Symfony</a>
+        <a href="https://materializecss.com/" class="col s2">Materialize</a>
         </div>
         <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">Links</h5>
+        <h5 class="white-text">{{ 'text.titre.encadrement'|trans }}</h5>
         <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://sciences.edu.umontpellier.fr/">{{ 'lien.ecole'|trans }}</a></li>
+            <li><a class="grey-text text-lighten-3" href="http://www.lirmm.fr/~lafourcade/index2.html">{{ 'lien.professeur'|trans }}: {{ 'lien.gender'|trans }} Lafourcade</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://blog.kulakowski.fr/">{{ 'lien.intervenant'|trans }}: {{ 'lien.gender'|trans }} Kulakowski</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://fr.linkedin.com/in/lo%C3%AFc-cariou-93b8418a">{{ 'lien.intervenant'|trans }}: {{ 'lien.gender'|trans }} Cariou</a></li>
         </ul>
         </div>
     </div>
     </div>
     <div class="footer-copyright cyan">
-    <div class="container">
-    © 2014 Copyright Text
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-    </div>
+        <div class="container">
+        © 2018 Copyright
+        <a class="grey-text text-lighten-4 right" href="https://moodle.umontpellier.fr/enrol/index.php?id=1092">{{ 'lien.ue'|trans }}</a>
+        </div>
     </div>
 </footer>
 {% endblock %}
